# Encrypted-File-Transfer

./: CMakeLists.txt  DESIGN.md  README.md
src/common/: crypto_utils.cpp  crypto_utils.h  file_transfer_packet.h  net_utils.cpp  net_utils.h  packet_flags.cpp  packet_flags.h
src/stx-recv/: CMakeLists.txt  connection.cpp  connection.h  connection_manager.cpp  connection_manager.h  main.cpp
src/stx-send/: CMakeLists.txt  main.cpp
test/: test_full.sh  test_half.sh
